--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ a img {
 
 /* GLOBAL STYLES */
 html {
-  box-shadow: 0 0 0 30px #000000 inset;
+  box-shadow: 0 0 0 30px #000 inset;
   padding: 0 30px;
 }
 body {
@@ -61,10 +61,10 @@ h1 {
 a {
   color: #f00;
 }
-h2 + p {
+h2 ~ p {
   font-size: 0.8em;
   font-style: italic;
-  margin: 1em auto 0 auto;
+  margin: 1em auto 0;
   max-width: 70%;
   text-align: center;
 }
@@ -75,7 +75,7 @@ h2 + p {
   color: #fff;
   position: fixed;
   width: 100%;
-  z-index: 10;
+  z-index: 20;
 }
 .header-logo {
   background-color: #000;
@@ -117,7 +117,7 @@ h2 + p {
   text-transform: uppercase;
 }
 .nav-links a:hover,
-.nav-links a:active {
+.nav-links a:active  {
   color: #ed6e2f;
 }
 .header-nav > li:first-child a {
@@ -129,27 +129,27 @@ h2 + p {
 
 /* FOOTER STYLES */
 .footer {
-  background-color: #000000;
-  padding: 10vh 0 15vh 0;
+  background-color: #000;
+  padding: 10vh 0 15vh;
   text-align: center;
 }
-.footer img {
+.footer-logo img {
   width: 50px;
 }
 .footer h3 {
-  color: #ffffff;
-  padding: 1.5em;
+  color: #fff;
+  padding-top: 1.5em;
   text-transform: uppercase;
 }
 .footer h3 span {
-  color: #aaaaaa;
+  color: #aaa;
 }
 .footer-nav li {
   display: inline-block;
-  margin: 2em 1em 0 0;
+  margin: 2em 1em 0;
 }
 .footer-nav a {
-  color: #cccccc;
+  color: #ccc;
 }
 
 /* HERO STYLES */
@@ -159,6 +159,11 @@ h2 + p {
 }
 
 /* SOCIAL STYLES */
+.social-list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
 .social-link {
   background: rgba(150, 150, 150, 0.5);
   border-radius: 99px;
@@ -176,11 +181,6 @@ h2 + p {
   vertical-align: middle;
   width: 2.5em;
 }
-.social-list {
-  list-style: none;
-  padding: 0;
-  text-align: center;
-}
 .social-list > li {
   display: inline-block;
   margin: 0 0.5em;
@@ -195,12 +195,11 @@ h2 + p {
 }
 .bio-box {
   border: 1px solid black;
-  border-color: #000000;
   box-sizing: border-box;
   float: left;
   font-size: 1rem;
   margin: 40px 1% 0;
-  padding: 0 2% 2%;
+  padding: 2%;
   width: 23%;
 }
 .bio-box h3 {
@@ -209,16 +208,15 @@ h2 + p {
   margin: -40px 0 1em;
   text-align: center;
 }
-.bio-box .social-link {
-  display: block;
-  margin: 2em 0 1em 0;
-}
 .bio-box img {
   width: 100%;
 }
+.bio-box .social-link {
+  display: block;
+  margin: 2em 0 1em;
+}
 .bio-copy {
   font-size: 1em;
-  line-height: 1.5;
 }
 .bio-copy a {
   color: green;
