re add reset.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,17 +5,9 @@
     {% include header.html%}
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
-      <ul class="social-list">
-        <li>
-          <a href="https://example.com/" class="social-link">Fb</a>
-        </li>
-        <li>
-          <a href="https://example.com/" class="social-link">Tw</a>
-        </li>
-        <li>
-          <a href="https://example.com/" class="social-link">Gh</a>
-        </li>
-      </ul>
+        <ul class="social-list social-hero">
+          {% include social-list.html %}
+        </ul>
     </div>
     <h2>THE FOUNDERS</h2>
       <p>
