--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
     <ul class="footer-nav nav-links">
       {% include nav-links.html %}
     </ul>
+    <ul class="social-list social-footer">
+      {% include social-list.html %}
+    </ul>
   </nav>
   <h3>Learn Enough <span>To Be Dangerous</span></h3>
 </footer>
