--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ a img {
 }
 html {
   box-shadow: 0 0 0 30px #000 inset;
-  padding: 0 30px;
+  padding: 0 30fpx;
 }
 body {
   font-family: helvetica, arial, sans;
@@ -59,8 +59,14 @@ h1 {
   font-size: 7vw;
   margin-top: 0;
 }
+h2 {
+  font-size: 2em;
+}
 a {
-  color: #f00;
+  color: #6397b5;
+}
+p {
+  line-height: 1.5;
 }
 h2 ~ p {
   font-size: 0.8em;
@@ -131,7 +137,7 @@ h2 ~ p {
 /* FOOTER STYLES */
 .footer {
   background-color: #000;
-  padding: 10vh 0 15vh;
+  padding: 10vh 0 15vh 0;
   text-align: center;
 }
 .footer-logo img {
@@ -156,7 +162,49 @@ h2 ~ p {
 /* HERO STYLES */
 .full-hero {
   background-color: #c7dbfc;
-  height: 50vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  height: 100vh;
+  padding-top: 10vh;
+}
+.full-hero:after {
+  bottom: 2vh;
+  border: 12px solid;
+  border-color: #fff transparent transparent transparent;
+  content: "";
+  color: #fff;
+  height: 0px;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,0)
+  width: 0px;
+}
+.hero-home {
+  background-image: url(/images/shark.jpg);
+  background-position: center top;
+}
+.hero-content {
+  color: #fff;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  top: 50%;
+  transform: translate(0,-50%);
+}
+.hero-content h1 {
+  color: rgba(255,255,255,0.8)
+  font-size: 7vw;
+  margin-bottom: 0.25em;
+}
+
+.hero-content .social-link {
+  background-color: rgba(255,255,255,.08);
+  color: #556c83;
+}
+.hero-content .social-link:hover {
+  background-color: #000;
+  color: #fff;
 }
 
 /* SOCIAL STYLES */
@@ -190,6 +238,30 @@ h2 ~ p {
   padding: 1em 1em .5em 1em;
 }
 
+/* HOMEPAGE STYLES */
+.home-section {
+  margin: 6rem auto;
+  max-width: 980px;
+  width: 90vw;
+}
+.home-section h2 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.home-callout {
+  background-color: #000;
+  color: #fff;
+  padding: 7vh 0;
+}
+.callout-title {
+  font-size: 5.75vw;
+  text-align: right;
+  text-transform: uppercase;
+}
+.callout-copy {
+  font-size: 0.8rem;
+}
+
 /* BIO STYLES */
 .bio-wrapper {
   font-size: 24px;
@@ -198,30 +270,27 @@ h2 ~ p {
   overflow: hidden;
 }
 .bio-box {
-  border: 1px solid black;
   box-sizing: border-box;
   float: left;
   font-size: 1rem;
-  margin: 40px 1% 0;
-  padding: 2%;
-  width: 23%;
+  margin: 6rem 0 0;
+  padding: 0 3%;
+  width: 33%;
 }
 .bio-box h3 {
   color: #fff;
   font-size: 1.5em;
   margin: -40px 0 1em;
   text-align: center;
+  text-transform: uppercase;
 }
 .bio-box img {
   width: 100%;
 }
 .bio-box .social-link {
   display: block;
-  margin: 2em 0 1em;
+  margin: 2em auto 1em;
 }
 .bio-copy {
-  font-size: 1em;
-}
-.bio-copy a {
-  color: green;
+  font-size: 0.75em;
 }
