--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   {% include head.html%}
-  <body>
-    {% include header.html%}
-
-    {{ content }}
-
-    {% include footer.html %}
-  </body>
+    <body>
+      {% include header.html%}
+        <div class="content-container">
+        {{ content }}
+        </div>
+      {% include footer.html %}
+    </body>
 </html>
