--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,4 +1,4 @@
 <li><a href="/">Home</li>
 <li><a href="/gallery">Gallery</li>
-<li><a href="#">Nav 2</li>
-<li><a href="#">Nav 3</li>
+<li><a href="/blog">Blog</li>
+<li><a href="{{ site.posts.first.url }}">Newest Post</li>
