--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,11 @@ h1 {
 h2 {
   font-size: 2em;
 }
+h4 {
+  color: #999;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 a {
   color: #6397b5;
 }
@@ -215,6 +220,11 @@ h2 ~ p {
   background-color: #000;
   color: #fff;
 }
+.half-hero {
+  background-position: center, center;
+  background-size: cover;
+  height: 40vh;
+}
 
 /* COLUMN STYLES */
 .col-three {
@@ -237,6 +247,34 @@ h2 ~ p {
 .col-three .col-aside {
   flex: 0 1 20em;
 }
+.col-two {
+  display: flex;
+}
+.col-two .col-aside {
+  flex: 0 0 20em;
+  order: 1;
+}
+.col-two .col-content {
+  flex: 1 1 0;
+}
+
+/* PAGE STYLES */
+.page {
+  margin: 10vh auto 15vh;
+  width: 85vw;
+  max-width: 980px;
+}
+.page h1 {
+  font-size: 3em;
+  margin-bottom: 1em;
+  text-align: center;
+}
+.page h2 {
+  margin-bottom: 0.5em;
+}
+.page h4 {
+  margin-bottom: 1em;
+}
 
 /* SOCIAL STYLES */
 .social-list {
@@ -251,7 +289,7 @@ h2 ~ p {
   color: #fff;
   display: inline-block;
   font-family: helvetica, arial, sans;
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: bold;
   height: 2.5em;
   line-height: 1;
@@ -278,6 +316,17 @@ h2 ~ p {
 .home-section h2 {
   margin-bottom: 1.5rem;
   text-align: center;
+}
+.home-section h4 {
+  margin-bottom: 0.5em;
+  text-align: center;
+}
+.home-section .post-header {
+  text-align: center;
+}
+.home-section .blog-posts {
+  margin: auto;
+  width: 75%;
 }
 .home-callout {
   align-items: center;
@@ -349,7 +398,7 @@ h2 ~ p {
   display: inline-block;
   margin: 0 0 10px 0;
   opacity: 0.5;
-  transition: all 0.5s ease-in-out;
+  transition: all .5s ease-in-out;
   width: 100%;
 }
 .gallery-thumbs img:hover {
@@ -358,6 +407,7 @@ h2 ~ p {
 .gallery-thumbs .current img {
   box-shadow: 0 0 0 5px #ed6e2f;
   opacity: 1;
+  cursor: default;
 }
 .gallery-photo {
   position: relative;
@@ -370,4 +420,85 @@ h2 ~ p {
 }
 .gallery-info h3 {
   margin-bottom: 1em;
+}
+
+/* BLOG STYLES */
+.blog-recent {
+  text-align: right;
+}
+.blog-title-list {
+  list-style: none;
+  padding: 0;
+}
+.blog-title-list li ~ li {
+  margin-top: 1.5em;
+}
+.blog-title-list span {
+  color: #999;
+  display: block;
+  font-size: 0.8em;
+  font-style: italic;
+  margin-top: 0.5em;
+}
+.blog-posts ~ .blog-posts {
+  border-top: 1px dotted rgba(0, 0, 0, 0.1);
+  margin-top: 4em;
+  padding-top: 4em;
+}
+.blog-posts .post-header {
+  font-size: 0.8rem;
+}
+.post-header {
+  margin-bottom: 1.5em;
+}
+.post-header img, .post-header .social-link {
+  margin-right: 0.5em;
+}
+.post-header img {
+  border-radius: 99px;
+  display: inline-block;
+  height: 2.5em;
+  vertical-align: middle;
+}
+.posts-image {
+  background-position: center;
+  background-size: cover;
+  height: 6em;
+  margin-bottom: 1.5em;
+}
+.post {
+  width: 100%;
+}
+.post-content, .post-footer {
+  margin: auto;
+  max-width: 40em;
+  width: 85vw;
+}
+.pull-left {
+  float: left;
+  margin: 2em 2em 2em -2%;
+}
+.pull-right {
+  float: right;
+  margin: 2em -2% 2em 2em;
+}
+.post-aside {
+  background-color: rgba(0,0,0,0.01);
+  float: right;
+  margin 0 0 2em 2em;
+  padding: 2em;
+}
+.post .post-header {
+  margin-bottom: 2.5em;
+  text-align: center;
+}
+.post-content {
+  font-size: 1.1rem;
+}
+.post-footer {
+  border-top: 1px solid rgba(0,0,0,0.1);
+  font-size: 0.8em;
+  font-style: italic;
+  margin-top: 3em;
+  padding-top: 2em;
 }
